[package]
name = "energy_id"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git" }
smashline = { git = "https://github.com/blu-dev/smashline", branch = "development" }
memoffset = "0.6.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[features]
dev-plugin = []